--- a/office/KAEC_BIK/HTML/kaec-bik/index.html
+++ b/office/KAEC_BIK/HTML/kaec-bik/index.html
@@ -25,6 +25,8 @@
     <link href="assets/css/owl.carousel.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap-select.css" rel="stylesheet">
     <link href="assets/css/custom-dropdown.css" rel="stylesheet">
+    <link href="assets/css/responsive-tab-accrodian.css" rel="stylesheet">
+    <link href="assets/css/jquery.mCustomScrollbar.min.css" rel="stylesheet">
     <link href="assets/css/animate.css" rel="stylesheet">
     <!-- custom -->
     <link href="assets/css/custom.css" rel="stylesheet">
@@ -42,55 +44,57 @@
 
     <!-- header open -->
     <header class="wow fadeIn">
-        <div class="container">
-            <div class="row header-row">
-                <div class="col-lg-2 logo-col">
-                    <div class="header-main-logo">
-                        <a href="index.html"><img src="assets/images/logo.png" alt="KAEC BIK"></a>
+        <div class="header-wrapper StickyElementAfterScroll">
+            <div class="container">
+                <div class="row header-row">
+                    <div class="col-lg-2 logo-col">
+                        <div class="header-main-logo">
+                            <a href="index.html"><img src="assets/images/logo.png" alt="KAEC BIK"></a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-7 menu-col">
-                    <nav class="header-main-menu">
-                        <ul>
-                            <li class="current-item"><a href="#">HOME</a>
-                                <!-- <ul>
-                                    <li><a href="#">HOME</a></li>
-                                    <li><a href="#">COMMUNITIES</a></li>
-                                    <li><a href="#">WALK IN THE CITY</a></li>
-                                    <li><a href="#">CONTACT US</a>
-                                        <ul>
-                                            <li><a href="#">HOME</a></li>
-                                            <li><a href="#">COMMUNITIES</a></li>
-                                            <li><a href="#">WALK IN THE CITY</a></li>
-                                            <li><a href="#">CONTACT US</a></li>
-                                        </ul>
-                                    </li>
-                                </ul> -->
-                            </li>
-                            <li><a href="#">COMMUNITIES</a></li>
-                            <li><a href="#">WALK IN THE CITY</a></li>
-                            <li><a href="#">CONTACT US</a></li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-lg-2 contact-info-col">
-                    <div class="header-iconic-info">
-                        <ul>
-                            <li>
-                                <a href="#">Arabic</a>
-                            </li>
-                            <li class="only-icon">
-                                <a href="#"><img src="assets/images/icons/like-icon.png" alt=""></a>
-                            </li>
-                        </ul>
+                    <div class="col-lg-7 menu-col">
+                        <nav class="header-main-menu">
+                            <ul>
+                                <li class="current-item"><a href="#">HOME</a>
+                                    <!-- <ul>
+                                        <li><a href="#">HOME</a></li>
+                                        <li><a href="#">COMMUNITIES</a></li>
+                                        <li><a href="#">WALK IN THE CITY</a></li>
+                                        <li><a href="#">CONTACT US</a>
+                                            <ul>
+                                                <li><a href="#">HOME</a></li>
+                                                <li><a href="#">COMMUNITIES</a></li>
+                                                <li><a href="#">WALK IN THE CITY</a></li>
+                                                <li><a href="#">CONTACT US</a></li>
+                                            </ul>
+                                        </li>
+                                    </ul> -->
+                                </li>
+                                <li><a href="#">COMMUNITIES</a></li>
+                                <li><a href="#">WALK IN THE CITY</a></li>
+                                <li><a href="#">CONTACT US</a></li>
+                            </ul>
+                        </nav>
                     </div>
-                    <div class="header-iconic-info">
-                        <ul>
-                            <li>
-                                <a href="tel:8001180010"><img src="assets/images/icons/header-phone-icon.png" alt="">
-                                    800 11 800 10</a>
-                            </li>
-                        </ul>
+                    <div class="col-lg-2 contact-info-col">
+                        <div class="header-iconic-info">
+                            <ul>
+                                <li>
+                                    <a href="#">Arabic</a>
+                                </li>
+                                <li class="only-icon">
+                                    <a href="#"><img src="assets/images/icons/like-icon.png" alt=""></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="header-iconic-info">
+                            <ul>
+                                <li>
+                                    <a href="tel:8001180010"><img src="assets/images/icons/header-phone-icon.png" alt="">
+                                        800 11 800 10</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -108,7 +112,7 @@
                         <div class="search-filter-col">
                             <select id="propertyType">
                                 <option value="hide">Property Type</option>
-                                <option value="Apartment" size="12">Apartment</option>
+                                <option value="Apartment" size="12" selected="selected">Apartment</option>
                                 <option value="Plot" size="5">Plot</option>
                                 <option value="TownHome" size="4">Town Home</option>
                                 <option value="PairedHome" size="8">Paired Home</option>
@@ -116,25 +120,35 @@
                             </select>
                         </div>
                         <div class="search-filter-col">
-                            <select id="date">
-                                <option value="hide">-- Month --</option>
-                                <option value="january">January</option>
-                                <option value="february">February</option>
-                                <option value="march">March</option>
-                                <option value="april">April</option>
-                                <option value="may">May</option>
-                                <option value="june">June</option>
-                                <option value="july">July</option>
-                                <option value="august">August</option>
-                                <option value="september">September</option>
-                                <option value="october">October</option>
-                                <option value="november">November</option>
-                                <option value="december">December</option>
+                            <select id="communitiesType">
+                                <option value="hide">Communities</option>
+                                <option value="AlMurooj">Al Murooj</option>
+                                <option value="AlWaha">Al Waha</option>
+                                <option value="AlTalahGardens">Al Talah Gardens</option>
+                                <option value="AlShurooq">Al Shurooq</option>
+                                <option value="BayLaSun">Bay La Sun</option>
                             </select>
                         </div>
-                        <div class="search-filter-col">f</div>
-                        <div class="search-filter-col">f</div>
-                        <div class="search-filter-col"><a class="rr">fdfdf</a></div>
+                        <div class="search-filter-col">
+                            <select id="minPriceType">
+                                <option value="hide">Min price</option>
+                                <option value="1000000">1000000</option>
+                                <option value="2000000">2000000</option>
+                                <option value="3000000">3000000</option>
+                            </select>
+                        </div>
+                        <div class="search-filter-col">
+                            <select id="maxPriceType">
+                                <option value="hide">Max price</option>
+                                <option value="1000000">1000000</option>
+                                <option value="2000000">2000000</option>
+                                <option value="3000000">3000000</option>
+                            </select>
+                        </div>
+                        <div class="search-filter-col action-col">
+                            <button type="submit" class="btn btn-success">SEARCH</button>
+                            <button type="submit" class="btn btn-success">ADVANCED SEARCH</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -142,8 +156,112 @@
     </section>
     <!-- search filter css endec -->
 
+    <!-- home map area open -->
+    <section class="home-map-area">
+        <img src="assets/images/home-banner-map.jpg" class="map" alt="">
+    </section>
+    <!-- open map area closed -->
 
-    <div style="width:100%; height:600px;"></div>
+
+    <!-- home communities section open -->
+    <section class="home-communities-sectn">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="section-heading heading-xl">Discover Communities</h2>
+                    <div class="communities-sectn-tab-area">
+                        <div class="tab_wrapper responsive-tab-accrodian">
+                            <ul class="tab_list content custom-scrollbar">
+                            <li class="active"><img src="assets/images/icons/AL-MUROOJ-icon.png" alt="AL MUROOJ">AL MUROOJ</li>
+                            <li><img src="assets/images/icons/AL-WAHA-icon.png" alt="AL WAHA">AL WAHA</li>
+                            <li><img src="assets/images/icons/AL-TALAH-GARDENS-icon.png" alt="AL TALAH GARDENS">AL TALAH GARDENS</li>
+                            <li><img src="assets/images/icons/AL-SHUROOQ-icon.png" alt="AL SHUROOQ">AL SHUROOQ</li>
+                            <li><img src="assets/images/icons/AL-TALAH-GARDENS-icon.png" alt="Bay La Sun">Bay La Sun</li>
+                            <li><img src="assets/images/icons/AL-MUROOJ-icon.png" alt="AL MUROOJ">AL MUROOJ</li>
+                            </ul>
+
+                            <div class="content_wrapper">
+                                <div class="tab_content active">
+                                    <h3 class="heading-lg">Why Al Murooj?</h3>
+                                    <p>It is a long established fact that a reader will be distracted by the readable
+                                    </p>
+                                    <hr>
+                                    ghghfghf
+                                </div>
+
+                                <div class="tab_content">
+                                    <h3>Tab content 2</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
+                                </div>
+
+
+                                <div class="tab_content">
+                                    <h3>Tab content 3</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
+                                </div>
+
+                                <div class="tab_content">
+                                    <h3>Tab content 4</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
+                                </div>
+
+                                <div class="tab_content">
+                                    <h3>Tab content 5</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
+                                </div>
+
+                                <div class="tab_content">
+                                    <h3>Tab content 6</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
+                                </div>
+                                <div class="tab_content active">
+                                    <h3>Tab content 1</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
+                                </div>
+
+                                <div class="tab_content">
+                                    <h3>Tab content 2</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
+                                </div>
+
+
+                                <div class="tab_content">
+                                    <h3>Tab content 3</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
+                                </div>
+
+                                <div class="tab_content">
+                                    <h3>Tab content 4</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
+                                </div>
+
+                                <div class="tab_content">
+                                    <h3>Tab content 5</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
+                                </div>
+
+                                <div class="tab_content">
+                                    <h3>Tab content 6</h3>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. </p>
+                                </div>
+
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- home communities section closed -->
+
+
+    <div style="width:100%; height:600px;">
+
+
+
+    </div>
 
 
     <!-- footer start -->
@@ -189,6 +307,11 @@
 
 
 
+
+
+
+
+
     <!-- goto top element open -->
     <!-- <div id='toTop'>To The Top!</div> -->
     <!-- goto top element closed -->
@@ -202,10 +325,16 @@
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/bootstrap-multiselect-dropdown.js"></script>
+    <script src="assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="assets/js/jquery.multipurpose_tabcontent.js"></script>
     <!-- <script src="assets/js/multi-label-menu.js"></script> -->
     <script src="assets/js/header-menu.js"></script>
     <!-- CUSTOM SCRIPT -->
     <script src="assets/js/script.js"></script>
+    <script>
+        
+        
+    </script>
 </body>
 
 </html>
